compiler/testData/diagnostics/tests/cast/AsErasedError.kt

fun ff(c: MutableCollection<String>) = <!UNCHECKED_CAST!>c as MutableList<Int><!>
